fix footer on mobile devices

--- a/src/scss/sections/footer-section.scss
+++ b/src/scss/sections/footer-section.scss
@@ -43,7 +43,7 @@ footer {
 
 		@include media-breakpoint-down(sm) {
 			margin: 0;
-			padding: 5px;
+			padding: 7px;
 		}
 	}
 }
