--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -25,7 +25,6 @@ header {
 		border-radius: 0 0 $main_radius $main_radius;
 		padding: 5px;
 		background-color: $my_primary_color;
-		box-shadow: 0 5px 5px rgba($color: #000000, $alpha: .2);
 
 		.header-logo > img {
 			padding: 5px;
